--- a/foundations/intro-to-css/04-chaining-selectors/style.css
+++ b/foundations/intro-to-css/04-chaining-selectors/style.css
@@ -1,7 +1,7 @@
 /* Add CSS Styling */
 .avatar.proportioned {
     width: 300px;
-    padding-top: 100%;
+    height:auto;
     position:relative;
 }
 
