--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
 }
 
 img {
@@ -7,9 +8,20 @@ img {
   height: 100px;
 }
 
+.flex-container {
+  display:flex;
+  justify-content: center;
+  gap: 56px;
+}
+
 .title {
   font-size: 36px;
   font-weight: 900;
+  margin-bottom: 32px;
+}
+
+.barberry, .chilli, .saffron, .pepper {
+  max-width: 200px;
 }
 
 /* do not edit this footer */
