--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -2,28 +2,63 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
+  font-size: 32px;
+  font-weight: 900;
+  padding-left: 16px;
+  align-content: center;
+}
+
+.grid {
+  display: flex;
+  flex-grow: 1;
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  align-content: center ;
+  text-align: center;
+  margin-top: 0;
 }
 
 .sidebar {
-  width: 300px;
+  min-width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  color: white;
+  padding:16px;
 }
 
+.cards {
+  display: flex;
+   padding: 48px;
+  gap: 56px;
+  flex-wrap: wrap;
+}
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  height:300px;
+  width:400px;
+  padding: 16px;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0; 
+  font-size: 24px;
+}
+a {
+  text-decoration: none;
+  color:white;
 }
