--- a/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
+++ b/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
@@ -9,6 +9,9 @@ html {
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
+  display: inline-grid;
+  gap: 1rem;
+  grid-template: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10% /10% 10% 10% 10% 10% 10% 10% 10% 10% 10%; 
 }
 
 .container div {
@@ -22,22 +25,31 @@ html {
 
 .header {
   background-color: #006157;
+  grid-column: 1 / 11;
 }
 
 .sidebar {
   background-color: #005B94;
+  grid-column: 1 / 3;
+  grid-row: 2 / 10;
 }
 
 .nav {
   background-color: #642cde;
+  grid-column: 3/11;
+  grid-row: 2/3;
 }
 
 .article {
   background-color: #7E1DC3;
+  grid-column: 3/11;
+  grid-row: 3 / 10;
 }
 
 .footer {
   background-color: #393f4d;
+  grid-column:1/11;
+  grid-row: 10/11;
 }
 
 .article p {
