--- a/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
+++ b/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
@@ -5,6 +5,10 @@
 
 .container {
   text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: 1fr 1fr 5fr 1fr;
+  gap:10px;
 }
 
 .container div {
@@ -17,6 +21,26 @@
 
 .header {
   background-color: #393f4d;
+  grid-column: 1 / 3;
+  display:grid;
+  grid-template-columns: 2fr 4fr;
+  grid-template-rows: 1fr;
+  gap: 10%;
+  align-items: center;
+}
+
+div.logo {
+  justify-self: start;
+}
+
+.menu ul {
+  display: grid;
+  grid-column: 2/5;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.menu li {
+  display: grid;
 }
 
 .menu ul,
@@ -25,7 +49,10 @@
 }
 
 .sidebar {
+  display: grid;
   background-color: #C50208;
+  gap: 50px;
+  grid-row: 2/4;
 }
 
 .sidebar .photo {
@@ -46,14 +73,27 @@
 
 .nav {
   background-color: #C50208;
+  display: grid;
+  align-items: center;
+
+}
+
+.nav ul {
+  display: grid;
+  align-content: center;
+  grid-template-columns: repeat(3, 1fr);
 }
 
 .nav ul li {
   font-size: 16px;
   text-transform: uppercase;
+  display: grid;
 }
 
 .article {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 15px;
   background-color: #bccbde;
 }
 
@@ -68,6 +108,8 @@
   background-color: #FFFFFF;
   color: black;
   text-align: center;
+  display: grid;
+  height: 200px;
 }
 
 .card p {
@@ -82,6 +124,7 @@
 }
 
 .footer {
+  grid-column: 1 / 3;
   background-color: #393f4d;
 }
 
