--- a/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
+++ b/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
@@ -9,9 +9,6 @@ html {
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
-  display: inline-grid;
-  gap: 1rem;
-  grid-template: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10% /10% 10% 10% 10% 10% 10% 10% 10% 10% 10%; 
 }
 
 .container div {
@@ -25,31 +22,22 @@ html {
 
 .header {
   background-color: #006157;
-  grid-column: 1 / 11;
 }
 
 .sidebar {
   background-color: #005B94;
-  grid-column: 1 / 3;
-  grid-row: 2 / 10;
 }
 
 .nav {
   background-color: #642cde;
-  grid-column: 3/11;
-  grid-row: 2/3;
 }
 
 .article {
   background-color: #7E1DC3;
-  grid-column: 3/11;
-  grid-row: 3 / 10;
 }
 
 .footer {
   background-color: #393f4d;
-  grid-column:1/11;
-  grid-row: 10/11;
 }
 
 .article p {
@@ -57,4 +45,23 @@ html {
   font-family: sans-serif;
   color: white;
   text-align: left;
+}
+
+.container {
+  display: grid;
+  grid-template-columns: 300px 900px;
+  grid-template-rows: 100px 100px 500px 100px;
+  gap: 15px;
+}
+
+.header {
+  grid-column: 1 / 3;
+}
+
+.sidebar {
+  grid-row: 2 / 4;
+}
+
+.footer {
+  grid-column: 1 / 3;
 }
